--- a/routing-broker-sample/routing-client/src/main/resources/application.properties
+++ b/routing-broker-sample/routing-client/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 io.rsocket.routing.client.service-name=routingclient
-io.rsocket.routing.client.brokers[0].host=localhost
-io.rsocket.routing.client.brokers[0].port=8010
+io.rsocket.routing.client.brokers[0].tcp.host=localhost
+io.rsocket.routing.client.brokers[0].tcp.port=8010
 logging.level.io.rsocket.routing.client=TRACE
