--- a/routing-broker-sample/routing-client-function/src/main/resources/application.properties
+++ b/routing-broker-sample/routing-client-function/src/main/resources/application.properties
@@ -7,3 +7,13 @@ io.rsocket.routing.client.tags.instance_name=samplefn1
 #---
 spring.config.activate.on-profile=fn2
 io.rsocket.routing.client.tags.instance_name=samplefn2
+
+#---
+spring.config.activate.on-profile=fn2 & broker2
+io.rsocket.routing.client.tags.instance_name=samplefn2
+io.rsocket.routing.client.brokers[0].tcp.host=localhost
+io.rsocket.routing.client.brokers[0].tcp.port=8020
+
+#---
+spring.config.activate.on-profile=fn3
+io.rsocket.routing.client.tags.instance_name=samplefn3
