--- a/rsocket-function/pom.xml
+++ b/rsocket-function/pom.xml
@@ -20,16 +20,40 @@
 	</properties>
 
 	<dependencies>
+		<dependency> 
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-function-context</artifactId>
+		</dependency>
+		
+		
+<!-- 		REST -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-function-web</artifactId>
+		</dependency>
+        
+<!--         STREAM -->
+       <dependency>
+           <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+       </dependency>
+
+<!--         RSocket -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.cloud</groupId> -->
+<!-- 			<artifactId>spring-cloud-function-rsocket</artifactId> -->
+<!-- 			<version>3.1.0-SNAPSHOT</version> -->
+<!-- 		</dependency> -->
+
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-function-rsocket</artifactId>
-			<version>3.1.0-SNAPSHOT</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
