--- a/rsocket-function/src/main/resources/application.properties
+++ b/rsocket-function/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+#spring.cloud.stream.bindings.output.destination=foo
+#spring.cloud.stream.bindings.output.producer.error-channel-enabled=true
+#
+#spring.rabbitmq.publisher-returns=true
